--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
     <link rel="stylesheet" href="styles/main.css" charset="utf-8">
   </head>
   <body>
-    <form action="#" method="post" data-js="form--data">
 
-    </form>
+      <form class="form" action="#" method="post">
+        <h1 class="form__title">sign up for my web app</h1>
+        <div class="input--wrapper" data-js="form--data">
+        </div>
+        <footer class="form--footer">
+          <input class="submit--button" type="submit" name="submit" value="Submit Form">
+        </footer>
+      </form>
+
   </body>
   <script type="text/javascript" src="js/main.js"></script>
 </html>
